hero spacing fix

--- a/less/main.less
+++ b/less/main.less
@@ -17,7 +17,7 @@ body{
     .row {
         .col-5{
             margin: 6% auto 8%;
-            min-width: 300px;
+            min-width: 250px;
             .col-6{
                 margin: 5% auto;
             }
